[gd_scene load_steps=20 format=3 uid="uid://b2340toqvxnfn"]

[ext_resource type="Script" uid="uid://blgv2pkabv5fp" path="res://scenes/inventory/PersonagemInfo.gd" id="1_c7dfc"]
[ext_resource type="FontFile" uid="uid://bkgdhvj2ggyfo" path="res://assets/fonts/CONSOLA.TTF" id="2_alebi"]
[ext_resource type="Script" uid="uid://bx57uyd24xbqu" path="res://scenes/inventory/CharInfoTab.gd" id="3_u2oif"]
[ext_resource type="Texture2D" uid="uid://cdosujgmkwpny" path="res://assets/battle/character_sprites/kath_batalha.png" id="4_luxgg"]
[ext_resource type="Script" uid="uid://byrb58yvybcku" path="res://scenes/inventory/EquipamentoTab.gd" id="5_iwtvn"]
[ext_resource type="Texture2D" uid="uid://drc3a4m5ua1qj" path="res://assets/inventory/item_panel.png" id="6_28yie"]
[ext_resource type="Texture2D" uid="uid://ce2m5nukf0t8n" path="res://assets/inventory/helmet.png" id="7_5xrww"]
[ext_resource type="Texture2D" uid="uid://dx22oj5y2ejyy" path="res://assets/inventory/body.png" id="8_utt0s"]
[ext_resource type="Texture2D" uid="uid://ha54ungc6lc6" path="res://assets/inventory/feet.png" id="9_n37uj"]
[ext_resource type="Texture2D" uid="uid://coexxfscxhwdd" path="res://assets/inventory/hand.png" id="10_dhuhp"]
[ext_resource type="Texture2D" uid="uid://cjd4frcflxt5f" path="res://assets/inventory/accessory.png" id="11_y8u4t"]
[ext_resource type="Texture2D" uid="uid://bsxpxv50u62xl" path="res://assets/inventory/arrow.png" id="13_y681a"]
[ext_resource type="AudioStream" uid="uid://bdx12agaryr3k" path="res://assets/sounds/interface/click7.mp3" id="14_f4qke"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7besx"]
bg_color = Color(0.0823529, 0.0823529, 0.0823529, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 3
corner_radius_top_right = 2
expand_margin_left = 11.0
expand_margin_top = 5.0
expand_margin_right = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_10aoo"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c15km"]
bg_color = Color(0.160784, 0.160784, 0.160784, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_negui"]
bg_color = Color(0.160784, 0.160784, 0.160784, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
corner_radius_top_left = 3
corner_radius_top_right = 2
expand_margin_left = 11.0
expand_margin_top = 5.0
expand_margin_right = 8.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h2j27"]
content_margin_left = 25.0
content_margin_top = 24.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vmxi8"]
texture = ExtResource("6_28yie")

[node name="PersonagemInfo" type="MarginContainer"]
visible = false
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 6
script = ExtResource("1_c7dfc")
metadata/_tab_index = 6

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 2
theme_override_colors/font_disabled_color = Color(1, 1, 1, 0)
theme_override_constants/outline_size = 0
theme_override_constants/side_margin = 16
theme_override_constants/icon_max_width = 54
theme_override_fonts/font = ExtResource("2_alebi")
theme_override_font_sizes/font_size = 30
theme_override_styles/tab_focus = SubResource("StyleBoxFlat_7besx")
theme_override_styles/tab_disabled = SubResource("StyleBoxFlat_10aoo")
theme_override_styles/panel = SubResource("StyleBoxFlat_c15km")
theme_override_styles/tab_selected = SubResource("StyleBoxFlat_negui")
theme_override_styles/tab_hovered = SubResource("StyleBoxFlat_7besx")
theme_override_styles/tab_unselected = SubResource("StyleBoxFlat_7besx")
current_tab = 5
tab_focus_mode = 0
script = ExtResource("3_u2oif")

[node name="Status" type="ScrollContainer" parent="TabContainer"]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_h2j27")
horizontal_scroll_mode = 0
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Status"]
layout_mode = 2

[node name="ClassNameLabel" type="RichTextLabel" parent="TabContainer/Status/VBoxContainer"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("2_alebi")
theme_override_font_sizes/normal_font_size = 29
bbcode_enabled = true
text = "[color=#cf6d1d]public class [/color][color=#228096]Personagem [/color]{"
fit_content = true
autowrap_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Status/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 53

[node name="TextureRect" type="TextureRect" parent="TabContainer/Status/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
texture = ExtResource("4_luxgg")
expand_mode = 3
stretch_mode = 4
flip_h = true

[node name="RichTextLabel" type="RichTextLabel" parent="TabContainer/Status/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("2_alebi")
theme_override_font_sizes/normal_font_size = 31
bbcode_enabled = true
text = "[color=#228096]String [/color][color=#66e1f8]nome [/color]= [color=green]“Kath”[/color];
[color=#cf6d1d]int [/color][color=#66e1f8]hp [/color]= [color=#228096]65[/color];
[color=#cf6d1d]int [/color][color=#66e1f8]pp [/color]= [color=#228096]48[/color];
[color=#cf6d1d]int [/color][color=#66e1f8]atk [/color]= [color=#228096]18[/color];
[color=#cf6d1d]int [/color][color=#66e1f8]def [/color]= [color=#228096]18[/color];
[color=#cf6d1d]int [/color][color=#66e1f8]vel [/color]= [color=#228096]36[/color];"
fit_content = true
autowrap_mode = 0

[node name="RichTextLabel2" type="RichTextLabel" parent="TabContainer/Status/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("2_alebi")
theme_override_font_sizes/normal_font_size = 31
bbcode_enabled = true
text = "[color=#228096]String [/color][color=#66e1f8]nome [/color]= [color=green]“Kath”[/color];
[color=#cf6d1d]int [/color][color=#66e1f8]hp [/color]= [color=#228096]65[/color];
[color=#cf6d1d]int [/color][color=#66e1f8]pp [/color]= [color=#228096]48[/color];
[color=#cf6d1d]int [/color][color=#66e1f8]atk [/color]= [color=#228096]18[/color];
[color=#cf6d1d]int [/color][color=#66e1f8]def [/color]= [color=#228096]18[/color];
[color=#cf6d1d]int [/color][color=#66e1f8]vel [/color]= [color=#228096]36[/color];"
fit_content = true
autowrap_mode = 0

[node name="CodeLabel" type="RichTextLabel" parent="TabContainer/Status/VBoxContainer"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("2_alebi")
theme_override_font_sizes/normal_font_size = 31
bbcode_enabled = true
text = "[color=#228096]String [/color][color=#66e1f8]nome [/color]= [color=green]“Kath”[/color];
[color=#cf6d1d]int [/color][color=#66e1f8]hp [/color]= [color=#228096]65[/color];
[color=#cf6d1d]int [/color][color=#66e1f8]pp [/color]= [color=#228096]48[/color];
[color=#cf6d1d]int [/color][color=#66e1f8]atk [/color]= [color=#228096]18[/color];
[color=#cf6d1d]int [/color][color=#66e1f8]def [/color]= [color=#228096]18[/color];
[color=#cf6d1d]int [/color][color=#66e1f8]vel [/color]= [color=#228096]36[/color];"
fit_content = true
autowrap_mode = 0

[node name="a" type="Label" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="Equipamento" type="MarginContainer" parent="TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16
script = ExtResource("5_iwtvn")
metadata/_tab_index = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Equipamento"]
layout_mode = 2

[node name="CharInfoContainer" type="HBoxContainer" parent="TabContainer/Equipamento/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="HBFContainer" type="VBoxContainer" parent="TabContainer/Equipamento/VBoxContainer/CharInfoContainer"]
layout_mode = 2

[node name="HeadSlot" type="Button" parent="TabContainer/Equipamento/VBoxContainer/CharInfoContainer/HBFContainer"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxTexture_vmxi8")
icon = ExtResource("7_5xrww")
icon_alignment = 1
expand_icon = true

[node name="BodySlot" type="Button" parent="TabContainer/Equipamento/VBoxContainer/CharInfoContainer/HBFContainer"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxTexture_vmxi8")
icon = ExtResource("8_utt0s")
icon_alignment = 1
expand_icon = true

[node name="FeetSlot" type="Button" parent="TabContainer/Equipamento/VBoxContainer/CharInfoContainer/HBFContainer"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxTexture_vmxi8")
icon = ExtResource("9_n37uj")
icon_alignment = 1
expand_icon = true

[node name="CharacterSprite" type="TextureRect" parent="TabContainer/Equipamento/VBoxContainer/CharInfoContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
texture = ExtResource("4_luxgg")
expand_mode = 3
stretch_mode = 4
flip_h = true

[node name="HHAContainer" type="VBoxContainer" parent="TabContainer/Equipamento/VBoxContainer/CharInfoContainer"]
layout_mode = 2

[node name="LHandSlot" type="Button" parent="TabContainer/Equipamento/VBoxContainer/CharInfoContainer/HHAContainer"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxTexture_vmxi8")
icon = ExtResource("10_dhuhp")
icon_alignment = 1
expand_icon = true

[node name="RHandSlot" type="Button" parent="TabContainer/Equipamento/VBoxContainer/CharInfoContainer/HHAContainer"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxTexture_vmxi8")
icon = ExtResource("10_dhuhp")
icon_alignment = 1
expand_icon = true

[node name="AcessorySlot" type="Button" parent="TabContainer/Equipamento/VBoxContainer/CharInfoContainer/HHAContainer"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxTexture_vmxi8")
icon = ExtResource("11_y8u4t")
icon_alignment = 1
expand_icon = true

[node name="OldStats" type="RichTextLabel" parent="TabContainer/Equipamento/VBoxContainer/CharInfoContainer"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("2_alebi")
theme_override_font_sizes/normal_font_size = 37
bbcode_enabled = true
text = "
[color=#cf6d1d]int [/color][color=#66e1f8]hp [/color]= [color=#228096]65[/color];
[color=#cf6d1d]int [/color][color=#66e1f8]pp [/color]= [color=#228096]48[/color];
[color=#cf6d1d]int [/color][color=#66e1f8]atk [/color]= [color=#228096]18[/color];
[color=#cf6d1d]int [/color][color=#66e1f8]def [/color]= [color=#228096]18[/color];
[color=#cf6d1d]int [/color][color=#66e1f8]vel [/color]= [color=#228096]36[/color];"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="ArrowStats" type="TextureRect" parent="TabContainer/Equipamento/VBoxContainer/CharInfoContainer"]
visible = false
layout_mode = 2
texture = ExtResource("13_y681a")
stretch_mode = 3

[node name="NewStats" type="RichTextLabel" parent="TabContainer/Equipamento/VBoxContainer/CharInfoContainer"]
visible = false
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("2_alebi")
theme_override_font_sizes/normal_font_size = 37
bbcode_enabled = true
text = "
[color=#cf6d1d]int [/color][color=#66e1f8]hp [/color]= [color=#228096]65[/color];
[color=#cf6d1d]int [/color][color=#66e1f8]pp [/color]= [color=#228096]48[/color];
[color=#cf6d1d]int [/color][color=#66e1f8]atk [/color]= [color=#228096]18[/color];
[color=#cf6d1d]int [/color][color=#66e1f8]def [/color]= [color=#228096]18[/color];
[color=#cf6d1d]int [/color][color=#66e1f8]vel [/color]= [color=#228096]36[/color];"
fit_content = true
autowrap_mode = 0

[node name="EquipmentContainer" type="ScrollContainer" parent="TabContainer/Equipamento/VBoxContainer"]
clip_contents = false
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="EquipContainer" type="VBoxContainer" parent="TabContainer/Equipamento/VBoxContainer/EquipmentContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CliqueTexto" type="RichTextLabel" parent="TabContainer/Equipamento/VBoxContainer/EquipmentContainer/EquipContainer"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("2_alebi")
theme_override_font_sizes/normal_font_size = 31
bbcode_enabled = true
text = "[color=#808080]
//Selecione o espaço de armadura para equipar [/color]"
fit_content = true

[node name="HeadContainer" type="GridContainer" parent="TabContainer/Equipamento/VBoxContainer/EquipmentContainer/EquipContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 95
theme_override_constants/v_separation = 95
columns = 11

[node name="BodyContainer" type="GridContainer" parent="TabContainer/Equipamento/VBoxContainer/EquipmentContainer/EquipContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 95
theme_override_constants/v_separation = 95
columns = 11

[node name="FeetContainer" type="GridContainer" parent="TabContainer/Equipamento/VBoxContainer/EquipmentContainer/EquipContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 95
theme_override_constants/v_separation = 95
columns = 11

[node name="HandContainer" type="GridContainer" parent="TabContainer/Equipamento/VBoxContainer/EquipmentContainer/EquipContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 95
theme_override_constants/v_separation = 95
columns = 11

[node name="AcessoryContainer" type="GridContainer" parent="TabContainer/Equipamento/VBoxContainer/EquipmentContainer/EquipContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 95
theme_override_constants/v_separation = 95
columns = 11

[node name="b" type="Label" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="Codigo" type="MarginContainer" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 4

[node name="c" type="Label" parent="TabContainer"]
layout_mode = 2
metadata/_tab_index = 5

[node name="Classe" type="MarginContainer" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 6

[node name="Audio_Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_f4qke")

[connection signal="pressed" from="TabContainer/Equipamento/VBoxContainer/CharInfoContainer/HBFContainer/HeadSlot" to="TabContainer/Equipamento" method="_on_head_slot_pressed"]
[connection signal="pressed" from="TabContainer/Equipamento/VBoxContainer/CharInfoContainer/HBFContainer/BodySlot" to="TabContainer/Equipamento" method="_on_body_slot_pressed"]
[connection signal="pressed" from="TabContainer/Equipamento/VBoxContainer/CharInfoContainer/HBFContainer/FeetSlot" to="TabContainer/Equipamento" method="_on_feet_slot_pressed"]
[connection signal="pressed" from="TabContainer/Equipamento/VBoxContainer/CharInfoContainer/HHAContainer/LHandSlot" to="TabContainer/Equipamento" method="_on_l_hand_slot_pressed"]
[connection signal="pressed" from="TabContainer/Equipamento/VBoxContainer/CharInfoContainer/HHAContainer/RHandSlot" to="TabContainer/Equipamento" method="_on_r_hand_slot_pressed"]
[connection signal="pressed" from="TabContainer/Equipamento/VBoxContainer/CharInfoContainer/HHAContainer/AcessorySlot" to="TabContainer/Equipamento" method="_on_acessory_slot_pressed"]
